--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-android": "vue-cli-service build && npx cap sync && npx cap open android",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
