--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/cli": "^2.0.2",
     "@capacitor/core": "^2.0.2",
     "@capacitor/ios": "^2.0.2",
+    "@ionic-native/core": "^5.24.0",
     "@ionic-native/media": "^5.24.0",
     "@ionic/core": "^5.0.7",
     "@ionic/vue": "0.0.9",
