--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cordova-plugin-media": "^5.0.3",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-js-modal": "^2.0.0-rc.3",
     "vue-router": "^3.1.6"
   },
   "devDependencies": {
